# Numerik

./: .gitignore  CMakeLists.txt  README
CMakeModules/: FindGMP.cmake
doc/: .gitignore
exercise_sheets/: pc_incomplete.hh  praediktorkorrektor.cc
src/: CMakeLists.txt
src/Blatt_02/: .gitignore  Blatt_02.tex  CMakeLists.txt  exercise_02_4.cpp  initial_value_problem.h
src/Blatt_03/: .gitignore  Blatt_03.tex  exercise_03_3.cpp  plotscript.p
src/Blatt_04/: Blatt_04.tex  CMakeLists.txt  exercise_04_3.cpp  heuns_method.h  initial_value_problem.h
src/Blatt_05/: Blatt_05.tex  CMakeLists.txt
src/Blatt_06/: Blatt_06.tex  CMakeLists.txt  initial_value_problem.h  trapezoid_rule.h
src/Blatt_07/: .gitignore  Blatt_07.tex  Blatt_07.tex~  CMakeLists.txt  CMakeLists.txt~  exercise_7.cpp  initial_value_problem.h
src/Blatt_08/: .gitignore  CMakeLists.txt  adamsbashfort.hh  blatt8.tex  lmm.cc  model.hh
src/Blatt_09/: Blatt_09.tex  CMakeLists.txt
src/Blatt_10/: blatt10.tex
src/Weihnachtsblatt/: .gitignore  CMakeLists.txt  Weihnachtsblatt.tex  model.hh  pc_incomplete.hh  praediktorkorrektor.cc  rentiere.cc  rentiere_model.hh  rentiere_plotscript.p
src/exercise_01_4/: .gitignore  CMakeLists.txt  exercise_01.tex  exercise_01_4.cpp  expliciteuler.hh  plotscript.p
src/tutorial/: .gitignore  CMakeLists.txt
