add_subdirectory(tutorial)
add_subdirectory(exercise_01_4)
add_subdirectory(Blatt_02)
add_subdirectory(Blatt_03)
add_subdirectory(Blatt_04)
add_subdirectory(Blatt_05)
add_subdirectory(Blatt_06)
add_subdirectory(Blatt_07)
add_subdirectory(Blatt_08)
add_subdirectory(Blatt_09)
add_subdirectory(Weihnachtsblatt)